# indicsafetybench

./: .env.example  .gitignore  GATING.md  LICENSE  README.md  pyproject.toml
data/expanded/: csam_adjacent_test_set.json  cybercrime_test_set.json  hate_speech_test_set.json  misinformation_test_set.json  privacy_doxxing_test_set.json  self_harm_test_set.json  sexual_exploitation_test_set.json  violence_weapons_test_set.json
data/pilot/: PILOT_REPORT.md  STATS_REPORT.md  judge_agreement_report.md  judge_ensemble_report.md  judgments_auto.jsonl  test_set.json  test_set_additions_v2.json  test_set_additions_v3.json  test_set_additions_v4.json  test_set_v2_580.json  uncertain_for_review.jsonl
data/seeds/: README.md  csam_adjacent.json  cybercrime.json  hate_speech.json  misinformation.json  privacy_doxxing.json  self_harm.json  sexual_exploitation.json  violence_weapons.json
data/seeds_v2/: cybercrime_v2.json  hate_speech_v2.json  self_harm_v2.json
data/validation/: PANEL_KRIPPENDORFF.md  PANEL_REPORT.md  claude_judge_v4_consolidated.json  claude_sensitivity_result.json  claude_sensitivity_sample.json  claude_sensitivity_sample.jsonl  claude_v4_ta_bn_scale_up.json  panel_disagree.md  panel_kappa.jsonl  sample_n10.jsonl
docs/: APPENDIX_X_RATER_FAILURES.md  FUNDING_REQUEST.md  VALIDATION_PROTOCOL.md  VALIDATION_VERDICT.md
paper/: README.md  paper.tex  references.bib
scripts/: build_claude_judge_wf.py  build_claude_wf_generic.py  build_v4_samples.py
src/attacks/: transform.py
src/paper/: make_figures.py  stats.py  validate_cli.py
tests/: test_sarvam.py
(+34 files in other folders)
