[project]
name = "indicsafetybench"
version = "0.1.0"
description = "Multilingual safety and jailbreak benchmark for Indian language LLMs"
authors = [
    { name = "Kaushik Kachireddy" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # LLM providers
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-generativeai>=0.7.0",
    "cohere>=5.10.0",
    "mistralai>=1.0.0",
    "together>=1.3.0",
    # HTTP for Sarvam, Krutrim, etc. (REST APIs)
    "httpx>=0.27.0",
    "tenacity>=9.0.0",  # retry logic
    # ML / NLP
    "transformers>=4.45.0",
    "sentence-transformers>=3.0.0",
    "sacrebleu>=2.4.0",
    # Indic
    # Note: indic-trans library install can be tricky on Windows; document fallback
    # Data handling
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.1",
    # Utility
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
